# PasteAll

./: .gitignore  BUGFIX.md  CONTRIBUTING.md  LICENSE  LINUX_DEPENDENCIES.md  README.md  fix_errors.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-ci.yml  flutter-ci.yml  rust-ci.yml
core/: Cargo.toml
core/src/: error.rs  lib.rs  types.rs
core/src/clipboard/: file_paths.rs  history.rs  mock_clipboard.rs  mod.rs
core/src/crypto/: mod.rs
core/src/ffi/: android.rs  common.rs  ios.rs  mod.rs
core/src/network/: ble_discovery.rs  discovery.rs  mod.rs  pairing.rs  transport.rs  wifi_transport.rs
core/src/storage/: mod.rs
core/tests/: ffi_tests.rs
desktop/: package.json
desktop/renderer/: index.html
desktop/renderer/css/: style.css
desktop/renderer/js/: app.js
desktop/src/: core-bridge.js  logger.js  main.js  preload.js
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/providers/: device_provider.dart
mobile/lib/utils/: theme.dart
